Set up life-tank to run from run.sh.